{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 5495,
  "lineage": "6e6926d4-07c1-fca3-2975-ece3e5c175ca",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.122.33.123",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-04-24T13:26:44.200-07:00",
            "id": "projects/learning-devops-341309/regions/us-central1/addresses/lb-public-address",
            "name": "lb-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "learning-devops-341309",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/addresses/lb-public-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.226.11.96",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-04-24T13:26:44.314-07:00",
            "id": "projects/learning-devops-341309/regions/us-central1/addresses/master1-public-address",
            "name": "master1-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "learning-devops-341309",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/addresses/master1-public-address"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "34.132.71.100",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-04-24T13:26:44.308-07:00",
            "id": "projects/learning-devops-341309/regions/us-central1/addresses/master2-public-address",
            "name": "master2-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "learning-devops-341309",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/addresses/master2-public-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.192.202.191",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-04-24T13:26:44.296-07:00",
            "id": "projects/learning-devops-341309/regions/us-central1/addresses/nat-public-address",
            "name": "nat-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "learning-devops-341309",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/addresses/nat-public-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.614-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-http",
            "log_config": [],
            "name": "tf-firewall-http",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.667-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-https",
            "log_config": [],
            "name": "tf-firewall-https",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.667-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-icmp",
            "log_config": [],
            "name": "tf-firewall-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.672-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-internal",
            "log_config": [],
            "name": "tf-firewall-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-internal",
            "source_ranges": [
              "10.20.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80-32000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.598-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-k8s",
            "log_config": [],
            "name": "tf-firewall-k8s",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-k8s",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:16.667-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-devops-341309/global/firewalls/tf-firewall-ssh",
            "log_config": [],
            "name": "tf-firewall-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "priority": 1000,
            "project": "learning-devops-341309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/firewalls/tf-firewall-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "tf-firewall-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "lb-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220419",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/disks/lb"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learning-devops-341309/zones/us-central1-a/instances/lb",
            "instance_id": "4404185096279034974",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQClc4uUrhPWI4TWddd1snhknApu4wRjrg2gVY55x4dIWoBguWQxUtgPyTAYJG6uoftkx1dhB9SE0w8TENKREFx685UkoZmwhyGM9X7fkb9Bv51Li+/pVRPzV6LHGF3Iq+OZdqG8JwXE7ftAhNghktJ9Jh3ZheMpNsMHdZzkTY3Vw7VIk7lyiD3SzoTZeD+cocFavi9dUwVuEQkrNHgoRO5ajNsiErldoOo/QGbz63gmGd8ikXXQctDBZVrAPWuqfJT4WL/DSs1+FBP2iIITqw4v0gQnAiYmJcZDk3Y6ZxNL/e1rMsN17le4I3fTG++pknOHDe5hOBK+xRVaZ9dgjw9GdYrmzJ8Suw5eVXZ0Gvv2Vo+UlmV1xoNPT0Nqqygd7Uzd1Z1KE71MtvWFeY7LdeJFYMuDRk+bzreXloEClNaTddYL [...]
              "startup-script": "\n#!/bin/bash\n\n# disable firewall\nsudo ufw disable\n\n# disable swap\nsudo swapoff -a\nsudo sed -i '/swap/d' /etc/fstab\n\n# add password to root\nsudo echo \"ubuntu:root\" | sudo chpasswd\nsudo sed -i \"s/^PermitRootLogin no/PermitRootLogin yes/\" /etc/ssh/sshd_config\n# sudo sed -i \"s/^PasswordAuthentication no/PasswordAuthentication yes/\" /etc/ssh/sshd_config\nsudo service sshd restart\n\nsudo tee -a /etc/environment \u003c\u003c-EOF\nMASTER_COUNT=2\nWORK [...]
            },
            "metadata_fingerprint": "-gWRGk8Jmcs=",
            "name": "lb",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.122.33.123",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
                "network_ip": "10.20.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
                "subnetwork_project": "learning-devops-341309"
              }
            ],
            "project": "learning-devops-341309",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/instances/lb",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tf-firewall-http",
              "tf-firewall-https",
              "tf-firewall-icmp",
              "tf-firewall-internal",
              "tf-firewall-k8s",
              "tf-firewall-ssh"
            ],
            "tags_fingerprint": "_PfbmNECwDc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.lb",
            "google_compute_network.network",
            "google_compute_subnetwork.network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220419",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/disks/master1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learning-devops-341309/zones/us-central1-a/instances/master1",
            "instance_id": "7704237838229310557",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQClc4uUrhPWI4TWddd1snhknApu4wRjrg2gVY55x4dIWoBguWQxUtgPyTAYJG6uoftkx1dhB9SE0w8TENKREFx685UkoZmwhyGM9X7fkb9Bv51Li+/pVRPzV6LHGF3Iq+OZdqG8JwXE7ftAhNghktJ9Jh3ZheMpNsMHdZzkTY3Vw7VIk7lyiD3SzoTZeD+cocFavi9dUwVuEQkrNHgoRO5ajNsiErldoOo/QGbz63gmGd8ikXXQctDBZVrAPWuqfJT4WL/DSs1+FBP2iIITqw4v0gQnAiYmJcZDk3Y6ZxNL/e1rMsN17le4I3fTG++pknOHDe5hOBK+xRVaZ9dgjw9GdYrmzJ8Suw5eVXZ0Gvv2Vo+UlmV1xoNPT0Nqqygd7Uzd1Z1KE71MtvWFeY7LdeJFYMuDRk+bzreXloEClNaTddYL [...]
              "startup-script": "#!/bin/bash\n\n# disable firewall\nsudo ufw disable\n\n# disable swap\nsudo swapoff -a\nsudo sed -i '/swap/d' /etc/fstab\n\n# add password to root\nsudo echo \"ubuntu:root\" | sudo chpasswd\nsudo sed -i \"s/^PermitRootLogin no/PermitRootLogin yes/\" /etc/ssh/sshd_config\n# sudo sed -i \"s/^PasswordAuthentication no/PasswordAuthentication yes/\" /etc/ssh/sshd_config\nsudo service sshd restart\nsudo tee -a /etc/environment \u003c\u003c-EOF\nMASTER_COUNT=\"2\"\nWORK [...]
            },
            "metadata_fingerprint": "zs9nHRbyxFY=",
            "name": "master1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.11.96",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
                "network_ip": "10.20.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
                "subnetwork_project": "learning-devops-341309"
              }
            ],
            "project": "learning-devops-341309",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/instances/master1",
            "service_account": [
              {
                "email": "terraform@learning-devops-341309.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tf-firewall-http",
              "tf-firewall-https",
              "tf-firewall-icmp",
              "tf-firewall-internal",
              "tf-firewall-k8s",
              "tf-firewall-ssh"
            ],
            "tags_fingerprint": "_PfbmNECwDc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.master",
            "google_compute_network.network",
            "google_compute_subnetwork.network_subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220419",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/disks/master2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learning-devops-341309/zones/us-central1-a/instances/master2",
            "instance_id": "5534140560350645341",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQClc4uUrhPWI4TWddd1snhknApu4wRjrg2gVY55x4dIWoBguWQxUtgPyTAYJG6uoftkx1dhB9SE0w8TENKREFx685UkoZmwhyGM9X7fkb9Bv51Li+/pVRPzV6LHGF3Iq+OZdqG8JwXE7ftAhNghktJ9Jh3ZheMpNsMHdZzkTY3Vw7VIk7lyiD3SzoTZeD+cocFavi9dUwVuEQkrNHgoRO5ajNsiErldoOo/QGbz63gmGd8ikXXQctDBZVrAPWuqfJT4WL/DSs1+FBP2iIITqw4v0gQnAiYmJcZDk3Y6ZxNL/e1rMsN17le4I3fTG++pknOHDe5hOBK+xRVaZ9dgjw9GdYrmzJ8Suw5eVXZ0Gvv2Vo+UlmV1xoNPT0Nqqygd7Uzd1Z1KE71MtvWFeY7LdeJFYMuDRk+bzreXloEClNaTddYL [...]
              "startup-script": "#!/bin/bash\n\n# disable firewall\nsudo ufw disable\n\n# disable swap\nsudo swapoff -a\nsudo sed -i '/swap/d' /etc/fstab\n\n# add password to root\nsudo echo \"ubuntu:root\" | sudo chpasswd\nsudo sed -i \"s/^PermitRootLogin no/PermitRootLogin yes/\" /etc/ssh/sshd_config\n# sudo sed -i \"s/^PasswordAuthentication no/PasswordAuthentication yes/\" /etc/ssh/sshd_config\nsudo service sshd restart\nsudo tee -a /etc/environment \u003c\u003c-EOF\nMASTER_COUNT=\"2\"\nWORK [...]
            },
            "metadata_fingerprint": "zs9nHRbyxFY=",
            "name": "master2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.132.71.100",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
                "network_ip": "10.20.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
                "subnetwork_project": "learning-devops-341309"
              }
            ],
            "project": "learning-devops-341309",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/instances/master2",
            "service_account": [
              {
                "email": "terraform@learning-devops-341309.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tf-firewall-http",
              "tf-firewall-https",
              "tf-firewall-icmp",
              "tf-firewall-internal",
              "tf-firewall-k8s",
              "tf-firewall-ssh"
            ],
            "tags_fingerprint": "_PfbmNECwDc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.master",
            "google_compute_network.network",
            "google_compute_subnetwork.network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220419",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/disks/worker1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/learning-devops-341309/zones/us-central1-a/instances/worker1",
            "instance_id": "7811965663941495902",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQClc4uUrhPWI4TWddd1snhknApu4wRjrg2gVY55x4dIWoBguWQxUtgPyTAYJG6uoftkx1dhB9SE0w8TENKREFx685UkoZmwhyGM9X7fkb9Bv51Li+/pVRPzV6LHGF3Iq+OZdqG8JwXE7ftAhNghktJ9Jh3ZheMpNsMHdZzkTY3Vw7VIk7lyiD3SzoTZeD+cocFavi9dUwVuEQkrNHgoRO5ajNsiErldoOo/QGbz63gmGd8ikXXQctDBZVrAPWuqfJT4WL/DSs1+FBP2iIITqw4v0gQnAiYmJcZDk3Y6ZxNL/e1rMsN17le4I3fTG++pknOHDe5hOBK+xRVaZ9dgjw9GdYrmzJ8Suw5eVXZ0Gvv2Vo+UlmV1xoNPT0Nqqygd7Uzd1Z1KE71MtvWFeY7LdeJFYMuDRk+bzreXloEClNaTddYL [...]
              "startup-script": "#!/bin/bash\n\n# disable firewall\nsudo ufw disable\n\n# disable swap\nsudo swapoff -a\nsudo sed -i '/swap/d' /etc/fstab\n\n# add password to root\nsudo echo \"ubuntu:root\" | sudo chpasswd\nsudo sed -i \"s/^PermitRootLogin no/PermitRootLogin yes/\" /etc/ssh/sshd_config\n# sudo sed -i \"s/^PasswordAuthentication no/PasswordAuthentication yes/\" /etc/ssh/sshd_config\nsudo service sshd restart\nsudo tee -a /etc/environment \u003c\u003c-EOF\nMASTER_COUNT=\"2\"\nWORK [...]
            },
            "metadata_fingerprint": "zs9nHRbyxFY=",
            "name": "worker1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
                "network_ip": "10.20.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
                "subnetwork_project": "learning-devops-341309"
              }
            ],
            "project": "learning-devops-341309",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/zones/us-central1-a/instances/worker1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "tf-firewall-http",
              "tf-firewall-https",
              "tf-firewall-icmp",
              "tf-firewall-internal",
              "tf-firewall-k8s",
              "tf-firewall-ssh"
            ],
            "tags_fingerprint": "_PfbmNECwDc=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/learning-devops-341309/global/networks/tf",
            "mtu": 0,
            "name": "tf",
            "project": "learning-devops-341309",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-04-24T13:27:28.418-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/learning-devops-341309/regions/us-central1/routers/tf-router-us-central1",
            "name": "tf-router-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "project": "learning-devops-341309",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/routers/tf-router-us-central1"
          },
          "dependencies": [
            "google_compute_network.network",
            "google_compute_subnetwork.network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "learning-devops-341309/us-central1/tf-router-us-central1/tf-router-nat-us-central1",
            "min_ports_per_vm": 0,
            "name": "tf-router-nat-us-central1",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/addresses/nat-public-address"
            ],
            "project": "learning-devops-341309",
            "region": "us-central1",
            "router": "tf-router-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.network",
            "google_compute_router.router",
            "google_compute_subnetwork.network_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-04-24T13:27:16.781-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
            "ip_cidr_range": "10.20.0.0/16",
            "name": "tf-subnetwork-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/global/networks/tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "learning-devops-341309",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-devops-341309/regions/us-central1/subnetworks/tf-subnetwork-us-central1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    }
  ]
}